--- a/Working_Notebooks/Capstone_new.ipynb
+++ b/Working_Notebooks/Capstone_new.ipynb
@@ -4346,6 +4346,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mycha\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:524: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  warnings.warn('No frequency information was'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1971-07-01    0.000000\n",
+       "1971-08-01    5.310001\n",
+       "1971-09-01    5.673278\n",
+       "1971-10-01    5.489213\n",
+       "1971-11-01    5.037498\n",
+       "                ...   \n",
+       "2006-09-01    5.205452\n",
+       "2006-10-01    5.248028\n",
+       "2006-11-01    5.250000\n",
+       "2006-12-01    5.250000\n",
+       "2007-01-01    5.235244\n",
+       "Freq: MS, Name: predicted_mean, Length: 427, dtype: float64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AR2_model = ARIMA(train, order=(2, 1, 0), freq='MS').fit()\n",
+    "\n",
+    "# We put a typ='levels' to convert our predictions to remove the differencing performed.\n",
+    "AR2_model.predict(typ='levels')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>FEDFUNDS</td>     <th>  No. Observations:  </th>    <td>427</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>            <td>ARIMA(2, 1, 0)</td>  <th>  Log Likelihood     </th> <td>-365.293</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Wed, 17 Aug 2022</td> <th>  AIC                </th>  <td>736.587</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>18:39:39</td>     <th>  BIC                </th>  <td>748.750</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>             <td>07-01-1971</td>    <th>  HQIC               </th>  <td>741.392</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                   <td>- 01-01-2007</td>   <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>        <td>opg</td>       <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>  <td>    0.4756</td> <td>    0.021</td> <td>   22.544</td> <td> 0.000</td> <td>    0.434</td> <td>    0.517</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L2</th>  <td>   -0.1972</td> <td>    0.021</td> <td>   -9.251</td> <td> 0.000</td> <td>   -0.239</td> <td>   -0.155</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th> <td>    0.3251</td> <td>    0.008</td> <td>   42.873</td> <td> 0.000</td> <td>    0.310</td> <td>    0.340</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>0.05</td> <th>  Jarque-Bera (JB):  </th> <td>24747.31</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.82</td> <th>  Prob(JB):          </th>   <td>0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>0.03</td> <th>  Skew:              </th>   <td>-2.62</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.00</td> <th>  Kurtosis:          </th>   <td>39.97</td> \n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                               SARIMAX Results                                \n",
+       "==============================================================================\n",
+       "Dep. Variable:               FEDFUNDS   No. Observations:                  427\n",
+       "Model:                 ARIMA(2, 1, 0)   Log Likelihood                -365.293\n",
+       "Date:                Wed, 17 Aug 2022   AIC                            736.587\n",
+       "Time:                        18:39:39   BIC                            748.750\n",
+       "Sample:                    07-01-1971   HQIC                           741.392\n",
+       "                         - 01-01-2007                                         \n",
+       "Covariance Type:                  opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "ar.L1          0.4756      0.021     22.544      0.000       0.434       0.517\n",
+       "ar.L2         -0.1972      0.021     -9.251      0.000      -0.239      -0.155\n",
+       "sigma2         0.3251      0.008     42.873      0.000       0.310       0.340\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   0.05   Jarque-Bera (JB):             24747.31\n",
+       "Prob(Q):                              0.82   Prob(JB):                         0.00\n",
+       "Heteroskedasticity (H):               0.03   Skew:                            -2.62\n",
+       "Prob(H) (two-sided):                  0.00   Kurtosis:                        39.97\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AR2_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -4371,6 +4527,154 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving Average Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mycha\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:524: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  warnings.warn('No frequency information was'\n",
+      "C:\\Users\\mycha\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:524: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  warnings.warn('No frequency information was'\n",
+      "C:\\Users\\mycha\\anaconda3\\envs\\learn-env\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:524: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "  warnings.warn('No frequency information was'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1971-07-01    0.000000\n",
+       "1971-08-01    5.310001\n",
+       "1971-09-01    5.666631\n",
+       "1971-10-01    5.499706\n",
+       "1971-11-01    5.067353\n",
+       "                ...   \n",
+       "2006-09-01    5.206657\n",
+       "2006-10-01    5.269304\n",
+       "2006-11-01    5.241402\n",
+       "2006-12-01    5.253829\n",
+       "2007-01-01    5.233841\n",
+       "Freq: MS, Name: predicted_mean, Length: 427, dtype: float64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MA_model= ARIMA(train, order=(0, 1, 1)).fit()\n",
+    "y_hat = MA_model.predict(typ='levels')\n",
+    "y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>FEDFUNDS</td>     <th>  No. Observations:  </th>    <td>427</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>            <td>ARIMA(0, 1, 1)</td>  <th>  Log Likelihood     </th> <td>-367.855</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Wed, 17 Aug 2022</td> <th>  AIC                </th>  <td>739.711</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>18:47:00</td>     <th>  BIC                </th>  <td>747.820</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>             <td>07-01-1971</td>    <th>  HQIC               </th>  <td>742.914</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                   <td>- 01-01-2007</td>   <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>        <td>opg</td>       <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L1</th>  <td>    0.4454</td> <td>    0.025</td> <td>   17.659</td> <td> 0.000</td> <td>    0.396</td> <td>    0.495</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th> <td>    0.3291</td> <td>    0.007</td> <td>   46.821</td> <td> 0.000</td> <td>    0.315</td> <td>    0.343</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>0.29</td> <th>  Jarque-Bera (JB):  </th> <td>24785.57</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.59</td> <th>  Prob(JB):          </th>   <td>0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>0.03</td> <th>  Skew:              </th>   <td>-2.67</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.00</td> <th>  Kurtosis:          </th>   <td>39.99</td> \n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                               SARIMAX Results                                \n",
+       "==============================================================================\n",
+       "Dep. Variable:               FEDFUNDS   No. Observations:                  427\n",
+       "Model:                 ARIMA(0, 1, 1)   Log Likelihood                -367.855\n",
+       "Date:                Wed, 17 Aug 2022   AIC                            739.711\n",
+       "Time:                        18:47:00   BIC                            747.820\n",
+       "Sample:                    07-01-1971   HQIC                           742.914\n",
+       "                         - 01-01-2007                                         \n",
+       "Covariance Type:                  opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "ma.L1          0.4454      0.025     17.659      0.000       0.396       0.495\n",
+       "sigma2         0.3291      0.007     46.821      0.000       0.315       0.343\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   0.29   Jarque-Bera (JB):             24785.57\n",
+       "Prob(Q):                              0.59   Prob(JB):                         0.00\n",
+       "Heteroskedasticity (H):               0.03   Skew:                            -2.67\n",
+       "Prob(H) (two-sided):                  0.00   Kurtosis:                        39.99\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MA_model.summary()"
+   ]
   },
   {
    "cell_type": "code",
